# learnwithai.unc.edu

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  JOB_NOTIFICATION_FIXES.md  JOKE_GENERATOR_PLAN.md  LICENSE  README.md  REFINEMENT_PLAN.md  SCRATCH_PLAN.md  conftest.py  learnwithai.code-workspace  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  post-create.sh
api/: .coveragerc  AGENTS.md  README.md  pyproject.toml
api/src/api/: config.py  context.py  dependency_injection.py  di.py  job_queue.py  job_update_consumer.py  job_update_manager.py  lifespan.py  main.py  openapi.py  spa.py
api/src/api/models/: __init__.py  activity.py  async_job.py  course.py  iyow_activity.py  job_control.py  joke_generation.py  metrics.py  operator.py  roster_upload.py  user_profile.py
api/src/api/realtime/: __init__.py  consumer.py  manager.py
api/src/api/routes/: __init__.py  activities.py  activities_iyow.py  admin.py  auth.py  courses.py  dev.py  health.py  joke_generation.py  me.py  operations.py  roster_uploads.py  ws.py
api/test/: __init__.py  conftest.py  test_context.py  test_dependency_injection.py  test_handle_job_update_message.py  test_job_queue.py  test_job_update_manager.py  test_main.py  test_models_exports.py  test_routes_auth.py  test_routes_courses.py  test_routes_health.py  test_routes_me.py  test_spa.py  test_ws.py
api/test/routes/: test_routes_activities.py  test_routes_admin.py  test_routes_auth.py  test_routes_courses.py  test_routes_dev.py  test_routes_health.py  test_routes_joke_generation.py  test_routes_me.py  test_routes_operations.py  test_routes_roster_uploads.py
docs/: README.md  flutter-to-typescript-migration.md  frontend-auth-plan.md
frontend/: .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.bak  README.md  angular.json  eslint.config.js  ng  ng-openapi-gen.json  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.conf.json  tsconfig.json  vitest.angular-component-resources.ts  vitest.config.ts
infra/: DEPLOYMENT.md  Dockerfile  README.md
scripts/: README.md  qa.sh  (+1 more)
(+238 files in other folders)
