[project]
name = "learnwithai-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "api",
  "packages/learnwithai-core",
  "packages/learnwithai-jobqueue"
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"