[project]
name = "learnwithai-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "api",
  "packages/learnwithai-core",
  "packages/learnwithai-jobqueue"
]

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
]
markers = [
  "integration: marks tests that exercise cross-module or framework integration",
]

[tool.coverage.run]
branch = true
source = [
  "api",
  "learnwithai",
  "learnwithai_jobqueue",
]
omit = [
  "*/test/*",
  "*/conftest.py",
  "*/scripts/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"