[project]
name = "learnwithai-api"
version = "0.1.0"
description = "FastAPI adapter for LearnWithAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "sqlmodel>=0.0.37,<0.1.0",
  "learnwithai-core",
  "learnwithai-jobqueue",
]

[tool.uv.sources]
learnwithai-core = { workspace = true }
learnwithai-jobqueue = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6.0,<7",
  "httpx>=0.28,<1",
  "ruff>=0.11,<0.16",
  "pyright>=1.1.400,<2",
]

[tool.uv.build-backend]
module-name = "api"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"